cleaned up persistence to work with spring-soc-sec

--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,8 @@
 		<param-value>
 				classpath:servlet-context.xml
 				classpath:security-context.xml
+				classpath:persistence-context.xml
+				classpath:common-context.xml
 		</param-value>
 	</context-param>
 	<listener>
