--- a/indgte/pom.xml
+++ b/indgte/pom.xml
@@ -1,73 +1,95 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.baldwin</groupId>
-  <artifactId>indgte</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>In Dumaguete</name>
-  
-  <properties>
-  	<project.version>0.0.1-SNAPSHOT</project.version>
-  	<spring.version>3.1.2.RELEASE</spring.version>
-  	<hibernate.version>4.1.5.Final</hibernate.version>
-  </properties>
-  <modules>
-   	<module>indgte-common</module>
-  	<module>indgte-persistence</module>
-  	<module>indgte-webapp</module>
-  </modules>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-webmvc</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>ch.qos.logback</groupId>
-  			<artifactId>logback-classic</artifactId>
-  			<version>1.0.6</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-core</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-context</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>com.baldwin</groupId>
-  			<artifactId>indgte-common</artifactId>
-  			<version>${project.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework.security</groupId>
-  			<artifactId>spring-security-web</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework.security</groupId>
-  			<artifactId>spring-security-config</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>com.baldwin</groupId>
-  			<artifactId>indgte-persistence</artifactId>
-  			<version>${project.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-orm</artifactId>
-  			<version>${spring.version}</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.hibernate</groupId>
-  			<artifactId>hibernate-entitymanager</artifactId>
-  			<version>${hibernate.version}</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.baldwin</groupId>
+	<artifactId>indgte</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>In Dumaguete</name>
+
+	<properties>
+		<project.version>0.0.1-SNAPSHOT</project.version>
+		<spring.version>3.1.2.RELEASE</spring.version>
+		<hibernate.version>4.1.5.Final</hibernate.version>
+		<tiles.version>2.2.2</tiles.version>
+	</properties>
+	<modules>
+		<module>indgte-common</module>
+		<module>indgte-persistence</module>
+		<module>indgte-webapp</module>
+	</modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.0.6</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.baldwin</groupId>
+				<artifactId>indgte-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.baldwin</groupId>
+				<artifactId>indgte-persistence</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-entitymanager</artifactId>
+				<version>${hibernate.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>${hibernate.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tiles</groupId>
+				<artifactId>tiles-core</artifactId>
+				<version>${tiles.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tiles</groupId>
+				<artifactId>tiles-jsp</artifactId>
+				<version>${tiles.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
