Added business ownership, hibernate-ized Userconnections table

--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,7 @@
 				classpath:security-context.xml
 				classpath:persistence-context.xml
 				classpath:common-context.xml
+				classpath:social-context.xml
 		</param-value>
 	</context-param>
 	<listener>
