--- a/indgte/indgte-webapp/pom.xml
+++ b/indgte/indgte-webapp/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>spring-social-facebook</artifactId>
 			<version>1.0.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-twitter</artifactId>
+			<version>1.0.1.RELEASE</version>
+		</dependency>
 
 		<!-- Tiles -->
 		<dependency>
