added the imgur stuff. still not decided between this and facebook. probably this

--- a/indgte/indgte-webapp/src/main/resources/social.properties
+++ b/indgte/indgte-webapp/src/main/resources/social.properties
@@ -4,6 +4,11 @@ socialsignin.signUpView=signupform
 socialsignin.defaultAuthenticationSuccessUrl=/test/
 socialsignin.defaultAccessDeniedUrl=/oauthlogin.jsp
 
-#Springsecurity Test app id/secret
+#Springsecurity Test app id/secret (Facebook)
 facebook.clientId=270450549726411
 facebook.clientSecret=2ac1377ce7bef87732f855ff7ac2ab14
+
+#Imgur
+imgur.devkey=1fbac05d6fce25d6a06a7a715b1cb2d8
+imgur.key=db05a4193492c1129b18512740bdaed6050739ea5
+imgur.secret=1ba253b39c8fb0890533bd1eb643fb89
