--- a/indgte/indgte-webapp/pom.xml
+++ b/indgte/indgte-webapp/pom.xml
@@ -86,6 +86,13 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
 		</dependency>
+		
+		<!-- Other libs -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
