--- a/indgte/indgte-webapp/src/main/resources/social.properties
+++ b/indgte/indgte-webapp/src/main/resources/social.properties
@@ -12,3 +12,12 @@ facebook.clientSecret=2ac1377ce7bef87732f855ff7ac2ab14
 imgur.devkey=1fbac05d6fce25d6a06a7a715b1cb2d8
 imgur.key=db05a4193492c1129b18512740bdaed6050739ea5
 imgur.secret=1ba253b39c8fb0890533bd1eb643fb89
+
+#Persistence
+db.host=localhost
+db.username=root
+db.password=
+db.port=3306
+db.schema=njfp
+#Hibernate Search
+search.index=/home/mbmartinez/dgte/hbsearch/
