--- a/indgte/indgte-webapp/src/main/resources/social.properties
+++ b/indgte/indgte-webapp/src/main/resources/social.properties
@@ -13,6 +13,9 @@ imgur.devkey=1fbac05d6fce25d6a06a7a715b1cb2d8
 imgur.key=db05a4193492c1129b18512740bdaed6050739ea5
 imgur.secret=1ba253b39c8fb0890533bd1eb643fb89
 
+#Google API key for maps
+google.apiKey=AIzaSyCUtkxOf-0LTkZsvCrWEcSPIv4XmPUZX7Y
+
 #Persistence
 db.host=localhost
 db.username=root
@@ -21,3 +24,5 @@ db.port=3306
 db.schema=njfp
 #Hibernate Search
 search.index=/home/mbmartinez/dgte/hbsearch/
+#Reload categories in BusinessCategoryList.java enum? Only true once per db
+categories.reload=false
