--- a/indgte/indgte-webapp/pom.xml
+++ b/indgte/indgte-webapp/pom.xml
@@ -93,6 +93,11 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.6.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
