--- a/indgte/indgte-webapp/src/main/resources/social.properties
+++ b/indgte/indgte-webapp/src/main/resources/social.properties
@@ -1,3 +1,4 @@
+#Signin
 application.secureUrl=http://localhost:8080
 
 socialsignin.signUpView=signupform
@@ -15,14 +16,3 @@ imgur.secret=1ba253b39c8fb0890533bd1eb643fb89
 
 #Google API key for maps
 google.apiKey=AIzaSyCUtkxOf-0LTkZsvCrWEcSPIv4XmPUZX7Y
-
-#Persistence
-db.host=localhost
-db.username=root
-db.password=
-db.port=3306
-db.schema=njfp
-#Hibernate Search
-search.index=/home/mbmartinez/dgte/hbsearch/
-#Reload categories in BusinessCategoryList.java enum? Only true once per db
-categories.reload=false
