--- a/indgte/pom.xml
+++ b/indgte/pom.xml
@@ -12,6 +12,7 @@
 		<spring.version>3.1.2.RELEASE</spring.version>
 		<hibernate.version>4.1.5.Final</hibernate.version>
 		<tiles.version>2.2.2</tiles.version>
+		<slf4j.version>1.7.2</slf4j.version>
 	</properties>
 	<modules>
 		<module>indgte-common</module>
@@ -28,7 +29,12 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.6</version>
+				<version>1.0.7</version>
+			</dependency>
+			<dependency> 
+			  <groupId>org.slf4j</groupId>
+			  <artifactId>slf4j-api</artifactId>
+			  <version>${slf4j.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
