--- a/indgte/indgte-webapp/src/main/resources/application.properties
+++ b/indgte/indgte-webapp/src/main/resources/application.properties
@@ -5,7 +5,8 @@ db.password=
 db.port=3306
 db.schema=njfp
 
-#Hibernate Search
+#Hibernate, Hibernate Search
+hibernate.showsql=false
 search.index=/home/mbmartinez/dgte/hbsearch/
 
 #Reload categories in BusinessCategoryList.java enum? Only true once per db
