--- a/indgte/indgte-webapp/src/main/resources/business.properties
+++ b/indgte/indgte-webapp/src/main/resources/business.properties
@@ -1,3 +1,6 @@
+#Default username for general stuff like Top 10 Business rankings
+default.username = Mark Martinez
+
 #Profile
 wishlist.maxitems = 20
 
