--- a/indgte/indgte-webapp/src/main/resources/application.properties
+++ b/indgte/indgte-webapp/src/main/resources/application.properties
@@ -6,7 +6,7 @@ db.port=3306
 db.schema=njfp
 
 #Hibernate, Hibernate Search
-hibernate.showsql=true
+hibernate.showsql=false
 search.index=/home/mbmartinez/dgte/hbsearch/
 
 #Reload categories in BusinessCategoryList.java enum? Only true once per db
