--- a/indgte/pom.xml
+++ b/indgte/pom.xml
@@ -9,7 +9,11 @@
 
 	<properties>
 		<project.version>0.0.1-SNAPSHOT</project.version>
-		<spring.version>3.1.2.RELEASE</spring.version>
+		<!-- 
+		<previous.spring.version>3.1.2.RELEASE</previous.spring.version>
+		 -->
+		<spring.security.version>3.1.2.RELEASE</spring.security.version>
+		<spring.version>3.2.0.RC1</spring.version>
 		<hibernate.version>4.1.5.Final</hibernate.version>
 		<tiles.version>2.2.2</tiles.version>
 		<slf4j.version>1.7.2</slf4j.version>
@@ -54,17 +58,17 @@
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-web</artifactId>
-				<version>${spring.version}</version>
+				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-taglibs</artifactId>
-				<version>${spring.version}</version>
+				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-config</artifactId>
-				<version>${spring.version}</version>
+				<version>${spring.security.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.baldwin</groupId>
