--- a/indgte/indgte-webapp/src/main/resources/application.properties
+++ b/indgte/indgte-webapp/src/main/resources/application.properties
@@ -10,4 +10,4 @@ hibernate.showsql=false
 search.index=/home/mbmartinez/dgte/hbsearch/
 
 #Reload categories in BusinessCategoryList.java enum? Only true once per db
-categories.reload=true
+categories.reload=false
