--- a/indgte/indgte-webapp/src/main/resources/business.properties
+++ b/indgte/indgte-webapp/src/main/resources/business.properties
@@ -1,5 +1,5 @@
 #Default username for general stuff like Top 10 Business rankings
-default.username = Mark Martinez
+default.username = mark.martinez.986
 
 #Profile
 wishlist.maxitems = 20
