whole lot of stuff

--- a/indgte/indgte-webapp/src/main/resources/social.properties
+++ b/indgte/indgte-webapp/src/main/resources/social.properties
@@ -9,6 +9,10 @@ socialsignin.defaultAccessDeniedUrl=/oauthlogin.jsp
 facebook.clientId=270450549726411
 facebook.clientSecret=2ac1377ce7bef87732f855ff7ac2ab14
 
+#dgte.ph (Twitter)
+twitter.consumerKey=Rz7SxzEB3C0ApNrDJ6cLg
+twitter.consumerSecret=dA40A4agSzPvuXJhiKPN4Y9H2sWhMkU7PkgdpXGZM
+
 #Imgur
 imgur.devkey=1fbac05d6fce25d6a06a7a715b1cb2d8
 imgur.key=db05a4193492c1129b18512740bdaed6050739ea5
